# bili_downloader_py

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Dockerfile_alpine  LOGGING_TO_FILE.md  LOG_FORMATS.md  OPTIMIZATION_SUMMARY.md  QWEN.md  README.md  WBI签名算法.md  bangumi_downloader.py  cookie.txt  copilot-instructions.md  docker-compose.yml  downloader_aria2.py  downloader_axel.py  main.py  pyproject.toml  requirements-dev.txt  test_imports.py  test_settings.py  vamerger.py  videostream.py  登录.md
bili_downloader/: exceptions.py
bili_downloader/cli/: cmd_download.py  cmd_login.py  cmd_search.py  global_config.py  main.py
bili_downloader/config/: config.toml  settings.py
bili_downloader/core/: bangumi_downloader.py  downloader_aria2.py  downloader_axel.py  qrcode_login.py  search.py  vamerger.py
bili_downloader/utils/: __init__.py  logger.py  print_utils.py
docs/: CLEANUP_REPORT.md  api.md  development.md  env_config.md  quickstart.md  usage.md  usage_guide.md
tests/: test_bangumi_downloader.py  test_cli.py  test_cli_commands.py  test_config.py  test_config_file.py  test_cookie_validation.py  test_downloader_aria2.py  test_downloader_axel.py  test_global_config.py  test_history.py  test_imports.py  test_keyword_filter.py  test_print_utils.py  test_qrcode_login.py  test_sanitize_filename.py  test_search.py  test_settings.py  test_vamerger.py
